# herringbone-fay

./: herringbone-fay.cabal
Web/Herringbone/Preprocessor/: Fay.hs
test/: Main.hs
test/resources/assets/: HelloWorld.js.fay
test/resources/compiled_assets/: HelloWorld.js
