name:                herringbone-fay
version:             0.0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       herringbone,
                       fay,
                       -- hack: compiling Fay requires fay-base, but we can't
                       -- depend on it explicitly (because of the
                       -- Prelude module name clash).
                       fay-text
  -- hs-source-dirs:
  default-language:    Haskell2010
